# llm-rag-document-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: __init__.py  config.py  logging.py
app/models/: schemas.py
app/services/: chunker.py  document_loader.py  embeddings.py  llm_client.py  rag_pipeline.py  vector_store.py
app/storage/: __init__.py  document_store.py
docs/: architecture.md
sample_docs/: sample_ai_policy.md
tests/: test_api.py  test_chunker.py  test_document_loader.py  test_rag_pipeline.py
