[project]
name = "llm-rag-document-assistant"
version = "0.1.0"
description = "FastAPI RAG assistant for PDF, TXT, and Markdown documents with ChromaDB."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alexander" }]
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pypdf>=4.2.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
